# keyword-extractor

./: .gitignore  README.md  TODO.md  idea.md  pyproject.toml
data/: article_tags.csv  articles_annotated.csv  tags.csv
docs/: FINETUNE.md  GLiNER_Evaluation_Report.md  V1_vs_V2_Technical_Note.md
examples/: basic_usage.py  bert_memory_example.py
scripts/: auto_optimize_gated_gliner.py  data_prep.py  download_werss_articles.py  eval_finetuned.py  evaluate.py  expand_training_data.py  llm_generate_training_data.py  prepare_training_data.py  quick_eval.py  smoke_gated_gliner.py  train_gated_gliner.py  train_gliner.py  train_gliner_correct.py  train_gliner_final.py  train_gliner_simple.py
src/keyword_extractor/: __init__.py  bert_memory.py  cli.py  extractor.py  gated_gliner.py  gazetteer.py  gliner_config.py  gliner_memory.py  html_cleaner.py  hybrid.py  labels.py  mlx_llm.py  models.py  noise_gate.py  postprocess.py  soft_mask_weak_labels.py  stopwords.py  topk_compressed_encoder.py  topk_gated_dropping.py
test_results/: bert_memory_test_results.json  bert_memory_test_summary.csv  phase1_gliner_results.json  phase1_summary.csv
tests/: compare_test.py  phase1_phase2_pipeline.py  test_extractor.py  test_full_content.py  test_hybrid.py
