[project]
name = "keyword-extractor"
version = "0.1.0"
description = "中文关键词提取工具 - 基于 KeyBERT 和 LLM"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hao", email = "hao@example.com"}
]
keywords = ["keybert", "keyword", "extraction", "chinese", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "keybert>=0.8.0",
    "jieba>=0.42.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# 高性能模型（推荐，需要 PyTorch）
hf = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

# 轻量级模型（CPU 友好）
model2vec = [
    "model2vec>=0.7.0",
]

# 中文优化模型 - BGE
bge = [
    "sentence-transformers>=2.2.0",
    "FlagEmbedding>=1.2.0",
]

# LLM 支持（本地部署）
llm = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
]

# API 服务
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

# 完整安装（推荐）
all = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "model2vec>=0.7.0",
    "FlagEmbedding>=1.2.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

# 开发依赖
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
kwextract = "keyword_extractor.cli:main"

[project.urls]
Homepage = "https://github.com/wang-h/keyword-extractor"
Repository = "https://github.com/wang-h/keyword-extractor"
Issues = "https://github.com/wang-h/keyword-extractor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keyword_extractor"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
